@@ -16,6 +16,7 @@ creation of a image are actually available or not. For that, one just needs to
 use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
 - Clean-up the prereq management and the bootstrapping mechanisms.
 - Add the basic support for Debian Lenny.
+- Make sure that all selected OPKGs are actually installed into the image.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
